--- a/Proyectos/Proyecto1/css/style.css
+++ b/Proyectos/Proyecto1/css/style.css
@@ -139,3 +139,27 @@ body {
   padding: 10px 0;
 }
 
+#edit-task-form label {
+  color: #000; /* Black */
+}
+
+#edit-task-form input, #edit-task-form textarea, #edit-task-form select {
+  border: 2px solid #8e44ad; /* Light Purple */
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+}
+
+#edit-task-form select {
+  background-color: #fff; /* White */
+  color: #000; /* Black */
+}
+
+#edit-task-form button {
+  background-color: #8e44ad; /* Light Purple */
+  color: #fff; /* White */
+  border: 2px solid #8e44ad; /* Light Purple */
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
